Table HrEmployee {
  Id int [pk, increment]
  EmployeeCode varchar(50) [not null, unique]
  FullName varchar(255) [not null]
  DepartmentId int
  PositionId int
  JoinDate date
  Status varchar(30)
  CreatedAt datetime
  UpdatedAt datetime
}

Table HrSalaryScale {
  Id int [pk, increment]
  Code varchar(50) [not null, unique]
  Name varchar(255) [not null]
  Description varchar(500)
  EffectiveFrom date [not null]
  EffectiveTo date
  Status varchar(30)
  CreatedAt datetime
  UpdatedAt datetime
}

Table HrSalaryGrade {
  Id int [pk, increment]
  SalaryScaleId int [not null]
  GradeNumber int [not null]
  Coefficient decimal(5,2) [not null]
  EffectiveFrom date [not null]
  EffectiveTo date
  Status varchar(30)
  CreatedAt datetime
  UpdatedAt datetime

  Indexes {
    (SalaryScaleId, GradeNumber) [unique]
  }
}

Table HrEmployeeSalary {
  Id int [pk, increment]
  EmployeeId int [not null]
  SalaryScaleId int [not null]
  SalaryGradeId int [not null]
  Coefficient decimal(5,2) [not null]
  EffectiveFrom date [not null]
  EffectiveTo date
  Reason varchar(255)
  DecisionId int
  CreatedAt datetime
  UpdatedAt datetime
}

Table HrSalaryReviewPeriod {
  Id int [pk, increment]
  Code varchar(50) [not null, unique]
  Name varchar(255) [not null]
  ReviewType varchar(30) [not null]
  ReviewDate date [not null]
  EffectiveDate date
  Status varchar(30) [not null]
  Description varchar(500)
  CreatedAt datetime
  UpdatedAt datetime
}

Table HrSalaryReviewEmployee {
  Id int [pk, increment]
  ReviewPeriodId int [not null]
  EmployeeId int [not null]
  CurrentSalaryId int [not null]
  CurrentGradeId int [not null]
  ProposedGradeId int
  CurrentCoefficient decimal(5,2)
  ProposedCoefficient decimal(5,2)
  EligibilityStatus varchar(30)
  EligibilityReason varchar(500)
  ReviewStatus varchar(30) [not null]
  Reason varchar(500)
  ApprovedAt datetime
  ApprovedBy int
  CreatedAt datetime
  UpdatedAt datetime

  Indexes {
    (ReviewPeriodId, EmployeeId) [unique]
  }
}

Table HrSalaryDecision {
  Id int [pk, increment]
  ReviewPeriodId int [not null]
  DecisionNumber varchar(100) [not null, unique]
  DecisionDate date [not null]
  EffectiveDate date [not null]
  DecisionType varchar(30) [not null]
  Status varchar(30) [not null]
  SignerEmployeeId int
  Description varchar(500)
  FileUrl varchar(500)
  CreatedAt datetime
  UpdatedAt datetime

  Note: 'At most one non-cancelled decision per ReviewPeriodId — enforced via a filtered unique index in Gen_Table.sql (DBML has no filtered-index syntax, so it is not modeled as [unique] here to avoid generating an incorrect plain unique constraint).'
}

Table HrSalaryDecisionDetail {
  Id int [pk, increment]
  DecisionId int [not null]
  EmployeeId int [not null]
  OldSalaryId int
  OldGradeId int
  OldCoefficient decimal(5,2)
  NewSalaryGradeId int [not null]
  NewCoefficient decimal(5,2) [not null]
  EffectiveFrom date [not null]
  Reason varchar(500)
  CreatedAt datetime
  UpdatedAt datetime
}

// Relationships 

Ref: HrSalaryGrade.SalaryScaleId > HrSalaryScale.Id

Ref: HrEmployeeSalary.EmployeeId > HrEmployee.Id
Ref: HrEmployeeSalary.SalaryScaleId > HrSalaryScale.Id
Ref: HrEmployeeSalary.SalaryGradeId > HrSalaryGrade.Id
Ref: HrEmployeeSalary.DecisionId > HrSalaryDecision.Id

Ref: HrSalaryReviewEmployee.ReviewPeriodId > HrSalaryReviewPeriod.Id
Ref: HrSalaryReviewEmployee.EmployeeId > HrEmployee.Id
Ref: HrSalaryReviewEmployee.CurrentSalaryId > HrEmployeeSalary.Id
Ref: HrSalaryReviewEmployee.CurrentGradeId > HrSalaryGrade.Id
Ref: HrSalaryReviewEmployee.ProposedGradeId > HrSalaryGrade.Id

Ref: HrSalaryDecision.SignerEmployeeId > HrEmployee.Id
Ref: HrSalaryDecision.ReviewPeriodId > HrSalaryReviewPeriod.Id

Ref: HrSalaryDecisionDetail.DecisionId > HrSalaryDecision.Id
Ref: HrSalaryDecisionDetail.EmployeeId > HrEmployee.Id
Ref: HrSalaryDecisionDetail.OldSalaryId > HrEmployeeSalary.Id
Ref: HrSalaryDecisionDetail.OldGradeId > HrSalaryGrade.Id
Ref: HrSalaryDecisionDetail.NewSalaryGradeId > HrSalaryGrade.Id